xmonad/xmonad.errors

xmonad.hs:147:1: warning: [-Wtabs]
    Tab character found here, and in three further locations.
    Please use spaces instead.
    |
147 |         , ("M-S-x", spawn "prompt \"Shutdown computer?\" \"sudo -A shutdown -h now\"")
    | ^^^^^^^^

xmonad.hs:330:5: error:
    parse error (possibly incorrect indentation or mismatched brackets)
    |
330 |     manageDiscord = customFloading $ W.RationalRect l t w h
    |     ^
